# bloodlight-zephyr

./: CMakeLists.txt  README.md
boards/arm/bloodlight_rev2/: Kconfig.defconfig  bloodlight_rev2.dts  bloodlight_rev2.yaml  bloodlight_rev2_defconfig
src/: acq.c  bl.c  led.c  led.h  led_test.c  spi-test.c  spi.c  tick.c  usb.c  usb.h
src/acq/: adc.c  channel.c  channel.h  dac.c  dma.c  opamp.c  rcc.h  source.c  timer.c
tests/led/: CMakeLists.txt  bloodlight_based.c  main.c  prj.conf  testcase.yaml
tests/usb/: CMakeLists.txt  prj.conf  test_usb.c
